--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.12.2",
     "@astrojs/check": "^0.8.3",
+    "@astrojs/db": "^0.12.0",
+    "@astrojs/vercel": "^7.7.2",
+    "@auth/core": "^0.32.0",
+    "@fontsource/poppins": "^5.0.14",
+    "@mlc-ai/web-llm": "^0.2.51",
+    "astro": "^4.13.1",
+    "auth-astro": "^4.1.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
