--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@astrojs/vercel": "^7.7.2",
     "@auth/core": "^0.32.0",
     "@fontsource/poppins": "^5.0.14",
-    "@mlc-ai/web-llm": "^0.2.51",
+    "@mlc-ai/web-llm": "^0.2.73",
     "astro": "^4.13.1",
     "auth-astro": "^4.1.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2"
+    "@playwright/test": "^1.46.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.1.0"
   }
 }
